--- a/src/scss/blocks/case-card.scss
+++ b/src/scss/blocks/case-card.scss
@@ -1,11 +1,13 @@
 .case-card {
   position: relative;
-  display: flex;
 
-  background-color: $bg2-color;
+  display: flex;
   width: 100%;
   height: 100%;
+
   color: $dark-color;
+
+  background-color: $bg2-color;
 }
 
 .case-card__content {
@@ -16,11 +18,12 @@
     flex-direction: column;
   }
 }
+
 .case-card__main {
-  padding: 25px 35px 75px;
   display: flex;
-  flex-direction: column;
   flex-grow: 1;
+  flex-direction: column;
+  padding: 25px 35px 75px;
 
   &:not(:last-child) {
     @media (width < $desktop-width) {
@@ -28,46 +31,58 @@
     }
   }
 }
+
 .case-card__logo-wrapper {
   display: flex;
   height: 70px;
 }
+
 .case-card__logo {
   max-width: 100%;
+
   object-fit: contain;
 }
+
 .case-card__description {
-  @include null-mp;
+  display: box;
+  -webkit-box-orient: vertical;
   margin-top: 23px;
   margin-bottom: 25px;
-  line-height: 125%;
-
-  display: -webkit-box;
   overflow: hidden;
-  -webkit-box-orient: vertical;
+
+  line-height: 125%;
   text-overflow: ellipsis;
+
+  @include null-mp;
   -webkit-line-clamp: 10;
 }
+
 .case-card__par {
   @include null-mp;
 }
+
 .case-card__par + .case-card__par {
   margin-top: 15px;
 }
+
 .case-card__more-link {
-  margin-top: auto;
   z-index: 1;
+
+  margin-top: auto;
 }
 
 .case-card__photo-wrapper {
   position: relative;
+
   width: 100%;
+
   @media (width >= $desktop-width) {
     min-width: 683px;
     min-height: 448px;
   }
   @media (width < $desktop-width) {
     @include image-wrapper(65%);
+
     // flex-grow: 1;
   }
 }
@@ -77,11 +92,13 @@
 }
 
 .case-card__full-card-link {
-  @include container-link;
-
   background-color: transparent;
+
   // opacity: 0;
+
   transition: background-color 0.3s ease;
+
+  @include container-link;
 
   &:focus-visible {
     outline: solid 2px $blue-color;
