--- a/src/scss/blocks/index-swiper.scss
+++ b/src/scss/blocks/index-swiper.scss
@@ -1,5 +1,6 @@
 .index-swiper__slide {
   position: relative;
+
   overflow: hidden;
 
   color: #ffffff;
@@ -12,31 +13,29 @@
   flex-direction: column;
   width: 100%;
   min-height: 530px;
-
-  padding-right: $paddings-mobile;
-  padding-left: $paddings-mobile;
   padding-top: 57px;
+  padding-right: $paddings-mobile;
   padding-bottom: 93px;
+  padding-left: $paddings-mobile;
 
   @media (min-width: $tablet-width) {
     max-width: $tablet-width;
   }
-
   @media (width >= $desktop-width) {
     max-width: $max-tablet-width;
+    min-height: 549px;
     padding-top: 100px;
     padding-right: $paddings-desktop;
-    padding-left: $paddings-desktop;
     padding-bottom: 120px;
-    min-height: 549px;
+    padding-left: $paddings-desktop;
   }
 }
 
 .index-swiper__slide-main {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   max-width: 80%;
-  flex-grow: 1;
 
   @media (width >= $desktop-width) {
     max-width: 620px;
@@ -58,22 +57,23 @@
 }
 
 .index-swiper__slide-text {
-  display: -webkit-box;
-  overflow: hidden;
+  display: box;
   -webkit-box-orient: vertical;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 8;
   margin: 0;
   margin-top: 15px;
   margin-bottom: 25px;
   padding: 0;
+  overflow: hidden;
 
   font-size: 16px;
   line-height: 130%;
+  text-overflow: ellipsis;
+
+  -webkit-line-clamp: 8;
 
   @media (width >= $desktop-width) {
-    margin-top: 20px;
     max-width: 390px;
+    margin-top: 20px;
 
     -webkit-line-clamp: 5;
   }
@@ -89,11 +89,12 @@
 
 .index-swiper__image-wrapper {
   position: absolute;
-  left: 0;
   top: 0;
+  left: 0;
+  z-index: -1;
+
   width: 100%;
   height: 100%;
-  z-index: -1;
 
   @include image-gradient;
 }
@@ -120,8 +121,9 @@
   padding: 12px 0;
 
   @media (width >= $desktop-width) {
-    padding: 15px 0;
     position: absolute;
     bottom: 0;
+
+    padding: 15px 0;
   }
 }
