--- a/src/scss/blocks/partners.scss
+++ b/src/scss/blocks/partners.scss
@@ -1,66 +1,74 @@
 .partners {
   padding-top: 0;
 }
+
 .partners__content {
   display: flex;
   flex-direction: column;
+
   gap: 20px;
 
   @media (width >= $tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 300px;
+
     column-gap: 22px;
+
+    grid-template-columns: 1fr 300px;
     row-gap: 45px;
   }
-
   @media (width >= $desktop-width) {
     grid-template-columns: 1fr 360px;
   }
 }
+
 .partners__form {
   @media (width >= $tablet-width) {
     grid-column: 1 / -1;
   }
 }
+
 .partners__selects-wrapper {
   @media (width >= $tablet-width) {
     max-width: 310px;
   }
 }
-.partners__form-label {
-}
+
 .partners__form-label-text {
   font-size: 16px;
 }
-.partners__form-select {
-}
+
 .partners__list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+
   gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
 
   @media (width >= 450px) {
     grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
   }
-
   @media (width >= $tablet-width) {
     grid-template-columns: repeat(2, 1fr);
   }
-
   @media (width >= $desktop-width) {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 35px;
-    row-gap: 20px;
     align-self: flex-start;
+
+    column-gap: 35px;
+
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
   }
 }
+
 .partners__item {
   display: flex;
-  aspect-ratio: 225/125;
+  max-width: 225px;
+
   cursor: pointer;
+
   transition: 0.3s ease;
   transition-property: background-color, opacity;
-  max-width: 225px;
+
+  aspect-ratio: 225/125;
 
   &:hover {
     @media (pointer: fine) {
@@ -75,30 +83,30 @@
 .partners__item--active {
   background-color: #f4f4f4;
 }
+
 .partners__item-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-grow: 1;
+  justify-content: center;
+  align-items: center;
 }
-.visually-hidden {
-}
-.partners__logo {
-}
+
+
 .partners__info-list-container {
   @media (width < $tablet-width) {
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 9999;
+
     // display: flex;
 
     display: none;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
 
-    background-color: rgba(68, 64, 137, 0.76);
+    background-color: rgb(68 64 137 / 76%);
   }
 }
 
@@ -110,50 +118,57 @@
 
 .partners__info-list {
   @media (width < $tablet-width) {
-    margin: auto;
     width: 100%;
     max-width: calc(100% - 2 * $paddings-mobile);
-    background-color: #fbfbfb;
+    margin: auto;
     padding: 35px 30px 50px;
+
+    background-color: #fbfbfb;
   }
 }
+
 .partners__info-list-item {
   display: none;
 
   @media (width >= $tablet-width) {
-    padding: 30px 20px;
-    background-color: #fbfbfb;
     min-height: 320px;
+    padding: 30px 20px;
+
+    background-color: #fbfbfb;
   }
   @media (width >= $desktop-width) {
-    padding: 43px 60px 43px 40px;
     min-height: 420px;
+    padding: 43px 60px 43px 40px;
   }
 }
+
 .partners__info-list-item--active {
   display: block;
 }
+
 .partners__info-wrapper {
   display: flex;
   flex-direction: column;
+
   gap: 15px;
 }
+
 .partners__logo--in-info {
   @media (width >= $tablet-width) {
     display: none;
   }
 }
+
 .partners__info-description {
   margin: 0;
   padding: 0;
+
   font-size: 17px;
 }
+
 .partners__info-status {
   margin: 0;
   padding: 0;
+
   font-weight: 600;
-}
-.partners__info-status-value {
-}
-.partners__info-link {
 }
