--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -16,7 +16,6 @@
     transition-property: opacity, background-color;
   }
 }
-
 @mixin image-gradient {
   &::after {
     content: "";
@@ -29,12 +28,11 @@
 
     background: linear-gradient(
       88deg,
-      rgba(68, 64, 137, 0.79) 0%,
-      rgba(77, 69, 177, 0) 100%
+      rgb(68 64 137 / 79%) 0%,
+      rgb(77 69 177 / 0%) 100%
     );
   }
 }
-
 @mixin image-hover {
   &::after {
     content: "";
@@ -46,8 +44,9 @@
     height: 100%;
 
     background-color: rgb(1 29 170 / 30%);
-    transition: opacity 0.3s ease;
     opacity: 0;
+
+    transition: opacity 0.3s ease;
   }
   &:hover {
     @media (pointer: fine) {
@@ -57,7 +56,6 @@
     }
   }
 }
-
 @mixin container-link {
   position: absolute;
   top: 0;
@@ -151,7 +149,6 @@
     }
   }
 }
-
 @mixin default-section-pads {
   padding-top: 30px;
   padding-bottom: 20px;
@@ -160,11 +157,12 @@
     padding-top: 90px;
   }
 }
-
 @mixin vertical-trimmed-text($rowNum) {
-  display: -webkit-box;
-  overflow: hidden;
+  display: box;
   -webkit-box-orient: vertical;
+  overflow: hidden;
+
   text-overflow: ellipsis;
+
   -webkit-line-clamp: $rowNum;
 }
