--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -158,7 +158,7 @@
   }
 }
 @mixin vertical-trimmed-text($rowNum) {
-  display: box;
+  display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
 
