--- a/src/views/pages/project-page.j2
+++ b/src/views/pages/project-page.j2
@@ -11,7 +11,7 @@
             <a class="breadcumbs__link" href="./index.html">Главная</a>
           </li>
           <li class="breadcumbs__item">
-            <a class="breadcumbs__link" href="./cases-v2.html">Кейсы</a>
+            <a class="breadcumbs__link" href="./projects.html">Кейсы</a>
           </li>
           <li class="breadcumbs__item">
             <span class="breadcumbs__link breadcumbs__link--current">Проектирование и монтаж СКС, ЭОМ Офиса компании «ОТКРЫТИЕ БРОКЕР»</span>
