--- a/src/scss/blocks/index-swiper.scss
+++ b/src/scss/blocks/index-swiper.scss
@@ -57,19 +57,15 @@
 }
 
 .index-swiper__slide-text {
-  display: box;
-  -webkit-box-orient: vertical;
   margin: 0;
   margin-top: 15px;
   margin-bottom: 25px;
   padding: 0;
-  overflow: hidden;
 
   font-size: 16px;
   line-height: 130%;
-  text-overflow: ellipsis;
 
-  -webkit-line-clamp: 8;
+  @include vertical-trimmed-text(10);
 
   @media (width >= $desktop-width) {
     max-width: 390px;
