--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -16,7 +16,8 @@
   <script src="./js/pristine.min.js" defer></script>
   <script src="./js/choices.min.js" defer></script>
   <script src="./js/imask.js" defer></script>
-  {# <script src="./js/modal.min.js" defer></script> #}
+  <script src="./js/phone-mail-mask.min.js" defer></script>
+  <script src="./js/modal.min.js" defer></script>
   <script src="./js/menu.min.js" defer></script>
   {% block js %}{% endblock %}
 </head>
