--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -134,7 +134,7 @@
 {% endblock content %}
 
 {% block modal %}
-  {% include "./blocks/modal-image.j2" %}
+  {% include "./blocks/modals/modal-image.j2" %}
 {% endblock %}
 
 {% block js %}
