--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -7,7 +7,7 @@
   height: 100%;
   overflow: auto;
 
-  background-color: rgb(0 0 0 / 60%);
+  background-color: rgba(68, 64, 137, 0.76);
 
   animation: showing-animation 0.3s ease;
 }
@@ -21,24 +21,16 @@
   z-index: 1;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   max-width: 577px;
   margin: auto;
-  padding: 70px 20px;
-  overflow: hidden;
-
-  background-color: #ffffff;
-  border-radius: 1px;
-  box-shadow: 5px 9px 21px rgb(48 41 131 / 30%);
 
   @media (min-width: $tablet-width) {
     width: 577px;
-    padding: 48px 45px 50px;
   }
   @media (min-width: $desktop-width) {
     width: 1026px;
-    max-width: 1026px;
   }
 }
 
@@ -67,6 +59,19 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
+
+  padding: 70px 20px;
+  border-radius: 5px;
+
+  background-color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    padding: 48px 45px 50px;
+  }
+  @media (min-width: $desktop-width) {
+    max-width: 1026px;
+  }
 }
 
 .modal__title {
@@ -74,11 +79,11 @@
   margin-bottom: 14px;
   padding: 0;
 
-  font-weight: 500;
-  font-size: 30px;
+  font-weight: 600;
+  font-size: 22px;
   line-height: 110%;
   font-family: $jost-font;
-  color: $black-color;
+  color: $dark-color;
 }
 
 .modal__form {
@@ -120,14 +125,14 @@
 }
 
 .modal__close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  position: relative;
 
   width: 30px;
   height: 30px;
   margin: 0;
   padding: 0;
+  margin-bottom: 10px;
+  align-self: flex-end;
 
   background-color: transparent;
   border: none;
@@ -143,7 +148,7 @@
     width: 30px;
     height: 2px;
 
-    background-color: $blue-color;
+    background-color: $white-color;
     transform: translateY(-50%) rotate(45deg);
     transform-origin: center;
 
@@ -210,5 +215,14 @@
     @media (min-width: $desktop-width) {
       max-width: 970px;
     }
+  }
+}
+
+.modal--resume {
+  & .modal__wrapper {
+    max-width: 510px;
+  }
+  & .modal__form-textarea {
+    height: auto;
   }
 }
