--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -69,7 +69,7 @@
 {% endblock content %}
 
 {% block modal %}
-  {% include "./blocks/modal-image.j2" %}
+  {% include "./blocks/modals/modal-image.j2" %}
 {% endblock %}
 
 {% block js %}
