--- a/src/views/pages/project-page.j2
+++ b/src/views/pages/project-page.j2
@@ -29,7 +29,7 @@
 {% endblock content %}
 
 {% block modal %}
-  {% include "./blocks/modal-image.j2" %}
+  {% include "./blocks/modals/modal-image.j2" %}
 {% endblock %}
 
 {% block js %}
