--- a/src/views/pages/projects.j2
+++ b/src/views/pages/projects.j2
@@ -109,7 +109,7 @@
 {% endblock content %}
 
 {% block modal %}
-  {% include "./blocks/modal-image.j2" %}
+  {% include "./blocks/modals/modal-image.j2" %}
 {% endblock %}
 
 {% block js %}
