--- a/src/views/blocks/swipers/team-swiper.j2
+++ b/src/views/blocks/swipers/team-swiper.j2
@@ -1,9 +1,9 @@
 <section class="team section">
   <div class="container">
     <div class="section__content">
-      <div class="team__header">
-        <h3 class="article__title title">Команда EXASystems</h3>
-        <a href="./partners.html" class="vendors__all-link">Команда</a>
+      <div class="section__header">
+        <h3 class="section__title title">Команда EXASystems</h3>
+        <a href="./partners.html" class="section__all-link">Команда</a>
       </div>
 
       <div class="card-swiper-container">
@@ -31,7 +31,7 @@
             {% endfor %}
           </div>
         </div>
-        <div class="team__swiper-buttons card-swiper__buttons card-swiper__buttons--desktop-ears">
+        <div class="team__swiper-buttons card-swiper__buttons card-swiper__buttons--desktop-ears card-swiper__buttons--default-top-margin">
           <button class="card-swiper__button card-swiper__button--prev card-swiper__button-{{ cardSwiperCnt }}-prev" type="button">
             <svg class="card-swiper__button-icon" width="12" height="12" viewBox="0 0 12 12">
               <use xlink:href="img/sprite.svg#card-swiper-arrow"></use>
