--- a/src/views/blocks/swipers/vendors-swiper.j2
+++ b/src/views/blocks/swipers/vendors-swiper.j2
@@ -67,9 +67,9 @@
 <section class="vendors section article">
   <div class="container">
     <div class="article__content">
-      <div class="vendors__header">
-        <h3 class="article__title title">Наши партнеры</h3>
-        <a href="./partners.html" class="vendors__all-link">Все партнеры</a>
+      <div class="section__header">
+        <h3 class="section__title title">Наши партнеры</h3>
+        <a href="./partners.html" class="section__all-link">Все партнеры</a>
       </div>
 
       <div class="vendors__swiper-container card-swiper-container">
