--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -61,6 +61,8 @@
 
     {% set cardSwiperCnt = 1 %}
     {% include "./blocks/swipers/team-swiper.j2" %}
+    {% set cardSwiperCnt = cardSwiperCnt + 1 %}
+    {% include "./blocks/swipers/vacancies-swiper.j2" %}
     {# {% include "./blocks/swipers/reviews-swiper.j2" %} #}
     {# {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/cases-swiper.j2" %} #}
@@ -76,5 +78,7 @@
   <script src="./js/swiper-bundle.min.js" defer></script>
   <script src="./js/card-swipers.min.js" defer></script>
   <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/simplebar.min.js" defer></script>
+  <script src="./js/simplebar-prefs.min.js" defer></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
