--- a/src/scss/blocks/card-swiper.scss
+++ b/src/scss/blocks/card-swiper.scss
@@ -69,7 +69,7 @@
 }
 
 .card-swiper__buttons--desktop-ears {
-  @media (width >= $desktop-width) {
+  @media (width >= $ears-swiper-buttons-available) {
     position: absolute;
     top: 50%;
     right: -80px;
@@ -79,5 +79,11 @@
     justify-content: space-between;
 
     transform: translateY(-50%);
+  }
+}
+
+.card-swiper__buttons--default-top-margin {
+  @media (width < $ears-swiper-buttons-available) {
+    margin-top: 15px;
   }
 }
