сделал страничку сертификатов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,6 +71,8 @@
 @import "./blocks/team";
 @import "./blocks/vacancy-card.scss";
 @import "./blocks/vacancies";
+@import "./blocks/cert-card";
+@import "./blocks/certificates";
 
 // @import "./blocks/subscribe-section";
 
@@ -86,7 +88,7 @@
 // @import "./blocks/blog-article";
 // @import "./blocks/popular-articles";
 // @import "./blocks/contacts";
-// @import "./blocks/certificates";
+
 // @import "./blocks/our-advantages";
 
 //
