--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -62,7 +62,10 @@
     {% set cardSwiperCnt = 1 %}
     {% include "./blocks/swipers/team-swiper.j2" %}
     {% set cardSwiperCnt = cardSwiperCnt + 1 %}
+    {% include "./blocks/swipers/certs-swiper.j2" %}
+    {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/vacancies-swiper.j2" %}
+
     {# {% include "./blocks/swipers/reviews-swiper.j2" %} #}
     {# {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/cases-swiper.j2" %} #}
