--- a/src/views/pages/vacancies.j2
+++ b/src/views/pages/vacancies.j2
@@ -26,45 +26,47 @@
           <button class="vacancies__send-button button button--blue" data-button-type="open-resume-modal">Отправить резюме</button>
           <ul class="vacancies__list">
             {% for vacancy in vacancies %}
-              <li class="vacancy-card">
-                <div class="vacancy-card__content">
-                  <p class="vacancy-card__title title">{{ vacancy.title | safe }}</p>
+              <li class="vacancies__list-item">
+                <div class="vacancy-card">
+                  <div class="vacancy-card__content">
+                    <p class="vacancy-card__title title">{{ vacancy.title | safe }}</p>
 
-                  <div class="vacancy-card__block">
-                    <p class="vacancy-card__text">Чем предстоит заниматься:</p>
-                    <ul class="vacancy-card__list">
-                      <li class="vacancy-card__list-item">Прием‚ расчет‚ оформление и ведение заказов</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                    </ul>
-                  </div>
+                    <div class="vacancy-card__block">
+                      <p class="vacancy-card__text">Чем предстоит заниматься:</p>
+                      <ul class="vacancy-card__list">
+                        <li class="vacancy-card__list-item">Прием‚ расчет‚ оформление и ведение заказов</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                      </ul>
+                    </div>
 
-                  <div class="vacancy-card__block">
-                    <p class="vacancy-card__text">Мы ожидаем:</p>
-                    <ul class="vacancy-card__list">
-                      <li class="vacancy-card__list-item">Опыт работы в фитнес-клубах от 3 лет</li>
-                      <li class="vacancy-card__list-item">Желание и умение работать с людьми</li>
-                      <li class="vacancy-card__list-item">Коммуникабельность‚ работоспособность‚ внимательность</li>
-                    </ul>
-                  </div>
+                    <div class="vacancy-card__block">
+                      <p class="vacancy-card__text">Мы ожидаем:</p>
+                      <ul class="vacancy-card__list">
+                        <li class="vacancy-card__list-item">Опыт работы в фитнес-клубах от 3 лет</li>
+                        <li class="vacancy-card__list-item">Желание и умение работать с людьми</li>
+                        <li class="vacancy-card__list-item">Коммуникабельность‚ работоспособность‚ внимательность</li>
+                      </ul>
+                    </div>
 
-                  <div class="vacancy-card__block">
-                    <p class="vacancy-card__text">Мы предлагаем:</p>
-                    <ul class="vacancy-card__list">
-                      <li class="vacancy-card__list-item">Прием‚ расчет‚ оформление и ведение заказов</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                      <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
-                    </ul>
+                    <div class="vacancy-card__block">
+                      <p class="vacancy-card__text">Мы предлагаем:</p>
+                      <ul class="vacancy-card__list">
+                        <li class="vacancy-card__list-item">Прием‚ расчет‚ оформление и ведение заказов</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                        <li class="vacancy-card__list-item">Отчетность‚ ведение клиентской базы</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </li>
