--- a/src/scss/blocks/modal-image.scss
+++ b/src/scss/blocks/modal-image.scss
@@ -11,7 +11,7 @@
   padding-bottom: 50px;
   overflow: auto;
 
-  background-color: rgb(0 0 0 / 90%);
+  background-color: rgba(68, 64, 137, 0.76);
 
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
