--- a/src/scss/blocks/vacancy-card.scss
+++ b/src/scss/blocks/vacancy-card.scss
@@ -3,9 +3,9 @@
   background-color: #f9f9f9;
 
   height: 670px;
-  // max-width: 550px;
-  width: 100%;
+
   margin-right: 12px;
+  flex-grow: 1;
 
   &::before {
     content: "";
