--- a/src/views/pages/certificates.j2
+++ b/src/views/pages/certificates.j2
@@ -24,13 +24,13 @@
           <h1 class="certificates__title page__title">Сертификаты</h1>
           <ul class="certificates__list">
             {% for certItem in certificates %}
-              <li class=" certificates__item cert-card">
+              <li class="cert-card">
                 <div class="cert-card__info">
                   <p class="cert-card__company">{{ certItem.companyName | safe }}</p>
                   <p class="cert-card__description">{{ certItem.type | safe }}</p>
                 </div>
                 <picture class="cert-card__photo-wrapper">
-                  <img class="cert-card__image" src="{{ certItem.imgPreviewSrc | safe }}" alt="" width="324" height="255">
+                  <img class="cert-card__image" src="{{ certItem.imgPreviewSrc | safe }}" alt="" width="324" height="255" loading="lazy">
                 </picture>
                 <a class="cert-card__link" href="{{ certItem.imgFullSrc | safe }}" data-image-can-open-in-modal></a>
               </li>
