--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,6 +73,7 @@
 @import "./blocks/vacancies";
 @import "./blocks/cert-card";
 @import "./blocks/certificates";
+@import "./blocks/contacts";
 
 // @import "./blocks/subscribe-section";
 
