--- a/src/views/pages/about.j2
+++ b/src/views/pages/about.j2
@@ -66,6 +66,8 @@
     {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/vacancies-swiper.j2" %}
 
+    {% include "./blocks/contacts.j2" %}
+
     {# {% include "./blocks/swipers/reviews-swiper.j2" %} #}
     {# {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/swipers/cases-swiper.j2" %} #}
@@ -83,5 +85,6 @@
   <script src="./js/modal-image.min.js" defer></script>
   <script src="./js/simplebar.min.js" defer></script>
   <script src="./js/simplebar-prefs.min.js" defer></script>
+  <script src="./js/contacts.min.js" defer></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
