--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,6 +74,7 @@
 @import "./blocks/cert-card";
 @import "./blocks/certificates";
 @import "./blocks/contacts";
+@import "./blocks/service";
 
 // @import "./blocks/subscribe-section";
 
