исправил ошибку ссылки политиики в футере

--- a/src/views/footer.j2
+++ b/src/views/footer.j2
@@ -83,7 +83,7 @@
         </div>
       </nav>
       <div class="page-footer__politics">
-        <a class="page-footer__politics-link" href=""#!>Политика конфиденциальности</a>
+        <a class="page-footer__politics-link" href="#!">Политика конфиденциальности</a>
         <p class="page-footer__politics-text">Вся представленная на сайте информация, в том числе касающаяся технических характеристик, наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437(2) Гражданского кодекса РФ. Подробную информацию о товаре уточняйте у менеджеров компании</p>
       </div>
     </div>
